--- a/style.css
+++ b/style.css
@@ -5,5 +5,24 @@ body {
     background-repeat: no-repeat; /* Prevents tiling */
     background-attachment: fixed; /* Keeps it fixed on scroll */
 
-    padding-top: 80px;
+    padding-top: 20px;
+}
+
+.navbar {
+   background-color: transparent;
+   overflow: hidden;
+   padding: 10px;
+}
+        
+.navbar a {
+   float: left;
+   display: block;
+   color: white;
+   text-align: center;
+   padding: 14px 20px;
+   text-decoration: none;
+}
+
+.navbar a:hover {
+   background-color: #575757;
 }
