--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 .main-content {
   flex: 2;
   padding: 20px;
-  border: 2px solid rgb(255, 255, 255);
+  /* border: 2px solid rgb(255, 255, 255); */
   margin-right: 10px;
   display: flex;
   align-items: center; /* Centers content vertically */
@@ -56,7 +56,7 @@ body {
 }
 .sidebar {
   flex: 1;
-  border: 2px solid rgb(255, 255, 255);
+  /* border: 2px solid rgb(255, 255, 255); */
   padding: 10px;
   display: flex;
   align-items: center; /* Centers sidebar-box vertically */
